kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stablecog-mixpanel-deployment
  namespace: stablecog
  labels:
    app: stablecog-mixpanel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stablecog-mixpanel
  template:
    metadata:
      labels:
        app: stablecog-mixpanel
    spec:
      containers:
        - name: stablecog-mixpanel
          image: replaceme
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 500Mi
          ports:
            - containerPort: 80
          imagePullPolicy: "Always"
      imagePullSecrets:
        - name: regcred
