kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sc-mixpanel-ingress
  namespace: stablecog
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.org/proxy-connect-timeout: 180s
    nginx.org/proxy-read-timeout: 180s
    nginx.org/client-max-body-size: 10m
spec:
  tls:
    - hosts:
        - mp.stablecog.com
      secretName: sc-mixpanel-server-secret
  rules:
    - host: mp.stablecog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sc-mixpanel-service
                port:
                  number: 80
